attempt 3 to fix interactive scrolling bby making graohic z-index 0

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ a {
     justify-content: center;
     align-items: center;
     align-content: space-evenly;
-    z-index: 1;
+    z-index: 0;
 }
 
 .dot {
